CHANGES IN VERSION 1.11.9
------------------------
 o build_Anno now works with tibble <2016-08-18, Tue>

CHANGES IN VERSION 1.11.8
------------------------
 o add unit test <2016-08-15, Mon>
 
CHANGES IN VERSION 1.11.7
------------------------
 o change for meshes packages <2016-08-11, Thu>
 
CHANGES IN VERSION 1.11.6
------------------------
 o user can use options(DOSE_workers = x) to set using x cores for GSEA analysis <2016-08-02, Tue>
 o support DisGeNET enrichment analyses <2016-08-01, Mon>
   + enrichDGN, enrichDGNv, gseDGN
 o update vignettes <2016-07-29, Fri>
 
CHANGES IN VERSION 1.11.5
------------------------
 o enrichMap now output igraph object that can be viewed using other software like networkD3 <2016-07-25, Mon>
 o dim methods for enrichResult and gseaResult <2016-07-22, Fri>
 o $ methods for enrichResult and gseaResult <2016-07-20, Wed>
 o switch from parallel to BiocParallel <2017-07-07, Thu>
 o [, head and tail methods for enrichResult and gseaResult <2016-07-06, Wed>
 o change according to GOSemSim <2016-07-05, Tue>
 
CHANGES IN VERSION 1.11.4
------------------------
 o 'title' parameter for gseaplot <2016-07-04, Mon>
   + contributed by https://github.com/pedrostrusso
   + https://github.com/GuangchuangYu/DOSE/pull/13
 o 'by' parameter in GSEA_internal, by default by = 'fgsea' <2016-07-04, Mon>
   + by = 'fgsea', use GSEA algorithm implemented in fgsea
   + by = 'DOSE', use GSEA algorithm implemented in DOSE 
 o leading edge analysis for GSEA <2016-07-04, Mon>
 
CHANGES IN VERSION 1.11.3
------------------------
 o output igraph object in cnetplot <2016-06-21, Tue>
 o upsetplot generics <2016-06-14, Tue>
 o [[ methods for enrichResult and gseaResult for accessing gene set <2016-06-14, Tue> 
 
CHANGES IN VERSION 1.11.2
------------------------
 o use byte compiler <2016-05-18, Wed>
 o https://github.com/Bioconductor-mirror/DOSE/commit/6c508c6a6816f465bb372f30f4ab99c839d81767

CHANGES IN VERSION 1.11.1
------------------------