@@ -114,10 +114,12 @@ importFrom(igraph,"E<-")
 importFrom(igraph,"V<-")
 importFrom(igraph,E)
 importFrom(igraph,V)
+importFrom(igraph,add_vertices)
 importFrom(igraph,degree)
 importFrom(igraph,delete.edges)
 importFrom(igraph,get.edgelist)
 importFrom(igraph,graph.data.frame)
+importFrom(igraph,graph.empty)
 importFrom(igraph,layout.fruchterman.reingold)
 importFrom(igraph,plot.igraph)
 importFrom(igraph,tkplot)
